# Geography-Based-SEIRDS-Vaccine-Booster-SYSC5104

./: .gitignore  CMakeLists.txt  README.md  run_simulation.ps1  run_simulation.sh
GIS_Viewer/: README.md
GIS_Viewer/ontario/run12/: visualization.json
GIS_Viewer/ontario/run13/: structure.json
GIS_Viewer/ontario/run2/: structure.json
GIS_Viewer/ontario/run25/: visualization.json
GIS_Viewer/ontario/run3/: structure.json
GIS_Viewer/ontario/run5/: structure.json
GIS_Viewer/ontario/run6/: structure.json
Scripts/: .gitignore
Scripts/Graph_Generator/: README.md  graph_aggregates.py  graph_per_regions.py
Scripts/Input_Generator/: README.md  generateScenario.py
Scripts/Input_Generator/ontario/: README.md  default.json  defaultORIG.json  fields.json  infectedCell.json
Scripts/Input_Generator/ontario/NEEDTHIS/: default.json
Scripts/Input_Generator/ontario/original/: default.json
Scripts/Input_Generator/ottawa/: README.md  default.json  infectedCell.json
Scripts/Msg_Log_Parser/: README.md  main.py
backup/: pandemic_messages.txt  pandemic_state.txt  states.csv
backup/stats/aggregate/: aggregate_timeseries.csv
cadmium_gis/ontario/: README.md  generatorData.json  ontario_phu_id_adjacency.csv  ontario_phu_id_clean.csv  visualization.json
cadmium_gis/ottawa/: README.md  generatorData.json  ottawa.geojson  ottawa_dauid_adjacency.csv  ottawa_dauid_clean.csv  visualization.json
config/: README.md
src/: main.cpp
src/model/: geographical_coupled.hpp
src/model/Helpers/: Assert.hpp
src/model/cells/: AgeData.hpp  README.md  geographical_cell.hpp  hysteresis_factor.hpp  sevirds.hpp  simulation_config.hpp  vicinity.hpp
src/model/cells/edit/: geographical_cell.hpp
